# fishi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: experiments_groundedsam.ipynb  experiments_openworldsam.ipynb
scripts/: demonstrations.py  resampling_ceiling.py  run_gdino_sam1.py  run_gdino_sam2.py  run_openworldsam.py  run_sam3.py
src/fishi/: __init__.py  analysis.py  cli.py  evaluation.py  metrics.py  report.py  sweep.py
src/fishi/metrics/: __init__.py  core.py  diagnostics.py
src/fishi/preprocess/: __init__.py  base.py  gnomonic.py  identity.py  patches.py  rectify.py  tangent.py  visualization.py
src/fishi/segmentation/: __init__.py  base.py  batching.py  grounded_sam.py  openworldsam.py  sam3.py  semantic.py
src/fishi/segmentation/grounded_sam/: __init__.py  base.py  sam1.py  sam2.py
src/fishi/woodscape/: __init__.py  calibration.py  canonical_split.json  classes.py  config.py  dataset.py  download.py  splits.json  splits.py
tests/: conftest.py  test_analysis.py  test_batching.py  test_calibration.py  test_classes.py  test_dataset.py  test_download.py  test_evaluation.py  test_grounded_sam.py  test_metrics.py  test_openworldsam.py  test_patches.py  test_preprocess.py  test_rectify.py  test_report.py  test_sam3.py  test_segmentation.py  test_smoke.py  test_splits.py  test_tangent.py  test_woodscape.py
tests/metrics/: test_core.py  test_diagnostics.py
tests/segmentation/: test_batching.py  test_grounded_sam.py  test_sam3.py  test_segmentation.py  test_semantic.py
