[project]
name = "fishi"
version = "0.1.0"
description = "Preprocessing techniques for zero-shot segmentation on the fisheye WoodScape dataset"
readme = "README.md"
authors = [
    { name = "ANDRE VINICIUS MOURA KORALESKI", email = "andre.andre2@discente.ufg.br" },
    { name = "HENRICK DE SOUZA SILVA", email = "henrick.henrick@discente.ufg.br" },
    { name = "CAIO LUCCA DOS SANTOS OLIVEIRA", email = "caiolucca@discente.ufg.br" },
    { name = "LUCAS NOGUEIRA BARROSO", email = "lucas.nogueira@discente.ufg.br" },
    { name = "RIAN DE SOUZA SANTOS", email = "rian.souza@discente.ufg.br" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "gdown>=6.1.0",
    "numpy>=2.5.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
# Loose floors (minimum versions our code needs) for arbitrary GPU machines
models = [
    "accelerate>=0.26.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.51.0",  # Sam2Model + Grounding DINO
]
# Exact versions matching Google Colab's preinstalled GPU stack (verified 2026-06).
colab = [
    "numpy==2.5.0",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "transformers==5.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fishi"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fishi --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
packages = ["fishi"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fishi.segmentation.grounded_sam", "fishi.segmentation.openworldsam"]
ignore_errors = true

[tool.coverage.run]
source = ["fishi"]
omit = [
    "*/segmentation/grounded_sam.py",
    "*/segmentation/openworldsam.py",
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
fail_under = 95
