[project]
name = "fishi"
version = "0.1.0"
description = "Preprocessing techniques for zero-shot segmentation on the fisheye WoodScape dataset"
readme = "README.md"
authors = [
    { name = "ANDRE VINICIUS MOURA KORALESKI", email = "andre.andre2@discente.ufg.br" },
    { name = "CAIO LUCCA DOS SANTOS OLIVEIRA", email = "caiolucca@discente.ufg.br" },
    { name = "HENRICK DE SOUZA SILVA", email = "henrick.henrick@discente.ufg.br" },
    { name = "LUCAS NOGUEIRA BARROSO", email = "lucas.nogueira@discente.ufg.br" },
    { name = "RIAN DE SOUZA SANTOS", email = "rian.souza@discente.ufg.br" },
]
# The python version is set to 3.12 due to library compatibility issues. We plan to loosen this.
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "rich>=15.0.0",
    "structlog>=24.0.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
download = ["gdown>=5.0.0"]

# The three HuggingFace models share one stack, so install only the one you run.
sam3 = ["torch>=2.4.0", "torchvision>=0.19.0", "transformers>=5.0.0", "accelerate>=0.26.0"]
gdino-sam1 = ["torch>=2.4.0", "torchvision>=0.19.0", "transformers>=5.0.0", "accelerate>=0.26.0"]
gdino-sam2 = ["torch>=2.4.0", "torchvision>=0.19.0", "transformers>=5.0.0", "accelerate>=0.26.0"]
# OpenWorldSAM is detectron2-based, set up from its repo (see docs).
openworldsam = ["torch>=2.4.0", "torchvision>=0.19.0"]

[project.scripts]
fishi = "fishi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fishi"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fishi --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
packages = ["fishi"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fishi.segmentation.grounded_sam.*",
    "fishi.segmentation.openworldsam",
    "fishi.segmentation.sam3",
]
ignore_errors = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
source = ["fishi"]
omit = [
    "*/segmentation/grounded_sam/*.py",
    "*/segmentation/openworldsam.py",
    "*/segmentation/sam3.py",
    "*/cli.py",
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
fail_under = 95
